--- a/Portal_NEABI/public/css/evento/create.css
+++ b/Portal_NEABI/public/css/evento/create.css
@@ -8,7 +8,7 @@ main{
     justify-content: center;
  }
 .evento{
-   background:rgb(214, 214, 15);
+   background:#f9eb1b;
    padding:2rem;
    min-width: 500px;
     min-height: 500px;
