--- a/Portal_NEABI/public/css/estilo.css
+++ b/Portal_NEABI/public/css/estilo.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 #logo_if {
     margin-top: 10px;
     margin-left: 10px;
@@ -13,15 +12,7 @@ header{
     margin-bottom: 5px;
     
 }
-.msg{
-    background-color: #D4EDDA;
-    color:#155724;
-    border: 1px solid #C3E6CB;
-    width: 100%;
-    margin-bottom: 0;
-    text-align: center;
-    padding: 10px;
-}
+
 .destaque2 {
     background-color: #EEEEEE;
     padding-left: 5px;
@@ -223,6 +214,7 @@ h3 {
 /*teste tamanho cards*/
 .card {
     width: 280px;
-    height: 470px;
+    height: 450px;
+    padding-right: 20px;
     
 }
