--- a/Portal_NEABI/public/css/noticia/create.css
+++ b/Portal_NEABI/public/css/noticia/create.css
@@ -9,7 +9,7 @@ main{
  }
  
  .create{
-    background:rgb(214, 214, 15);
+    background:#f9eb1b;
     padding:2rem;
     min-width: 500px;
      min-height: 500px;
