--- a/Portal_NEABI/public/css/estilo.css
+++ b/Portal_NEABI/public/css/estilo.css
@@ -12,7 +12,15 @@ header{
     margin-bottom: 5px;
     
 }
-
+.msg{
+    background-color: #D4EDDA;
+    color: #155724;
+    border: 1px solid #C3E6CB;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    padding: 10px;
+}
 .destaque2 {
     background-color: #EEEEEE;
     padding-left: 5px;
